--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,6 +65,14 @@
             android:layout_marginVertical="10dp"
             android:background="#ffc761"
             android:text="로그인" />
+        <Button
+            android:id="@+id/join_btn"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="60dp"
+            android:layout_marginVertical="10dp"
+            android:visibility="invisible"
+            android:text="회원가입" />
     </LinearLayout>
 
 </LinearLayout>
