--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,17 +60,27 @@
         <Button
             android:id="@+id/login_btn"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:layout_marginHorizontal="60dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginVertical="5dp"
             android:background="#ffc761"
             android:text="로그인" />
         <Button
+            android:id="@+id/join_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="60dp"
+            android:layout_marginVertical="5dp"
+            android:text="회원가입" />
+        <Button
             android:id="@+id/reset_btn"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:layout_marginHorizontal="60dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginVertical="5dp"
             android:text="디바이스 인증 초기화" />
     </LinearLayout>
 
