--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,6 +73,7 @@
             android:layout_weight="1"
             android:layout_marginHorizontal="60dp"
             android:layout_marginVertical="5dp"
+            android:visibility="invisible"
             android:text="회원가입" />
         <Button
             android:id="@+id/reset_btn"
@@ -81,6 +82,7 @@
             android:layout_weight="1"
             android:layout_marginHorizontal="60dp"
             android:layout_marginVertical="5dp"
+            android:visibility="invisible"
             android:text="디바이스 인증 초기화" />
     </LinearLayout>
 
